deleted shopping
